# Sarissa

./: Cargo.toml  Dockerfile  README.md  config.toml  config.toml.example  prometheus.yml  sarissa.service  setup.sh
docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md  DISCLAIMER.md
logrotate.d/: sarissa
migrations/: init.sql
rules/: sarissa_alerts.yml
scripts/: backup.sh  health_check.sh  maintenance.sh
src/: collaboration.rs  config.rs  dashboard.rs  database.rs  distributed.rs  exploit.rs  exploit_executor.rs  integration.rs  logging.rs  main.rs  monitoring.rs  monitoring_http.rs  plugin.rs  report.rs  scanner.rs  security.rs
src/ui/: dashboard.rs
templates/: report.html
