[package]
name = "sarissa"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.12", features = ["tokio", "glow", "advanced_gestures"] } # Ensure features you need
tokio = { version = "1", features = ["full"] } # process, fs, time, sync, rt-multi-thread
sqlx = { version = "0.8", features = [ "runtime-tokio", "sqlite", "macros", "chrono", "ipnetwork" ] }
ipnetwork = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
once_cell = "1.19"
rfd = "0.14"
csv = "1.3"
webbrowser = "1.0"
askama = { version = "0.12", features = ["with-serde"] } # For HTML reporting
regex = "1.10"
rust_xlsxwriter = "0.62" # For XLSX reporting
iced_aw = { version = "0.8", features = ["icons", "modal"] } # For icons and modals
tempfile = "3.10" # For temporary files with tools like FFUF, dnsrecon
sysinfo = "0.30" # For process management (stopping tasks)
zip = "2.1" # For handling .zip NVD feeds
rmp-serde = "1.3" # For MessagePack (Metasploit RPC)
base64 = "0.22" # For Metasploit RPC or other API interactions
url = "2.5" # For parsing URLs, useful for proxy config or tool inputs

[build-dependencies]
askama = "0.12" # If using Askama's build-time template compilation
