[package]
name = "sarissa"
version = "0.1.0"
edition = "2021"
authors = ["Besgood"]
description = "A modern network penetration testing tool with GUI interface based on Sparta and ported to rust"

[dependencies]
eframe = "0.24.1"
egui = "0.24.1"
tokio = { version = "1.37", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4.20"
env_logger = "0.11.2"
chrono = { version = "0.4", features = ["serde"] }
directories = "5.0"
dns-lookup = "2.0"
async-trait = "0.1.77"
regex = "1.10.2"
ssh2 = "0.9"
ftp = "3.0"
ipnetwork = "0.20.0"
csv = "1.3.0"
rust_xlsxwriter = "0.40.0"
plotters = "0.3"
base64 = "0.21.7"
weasyprint = "0.1.0"
handlebars = "4.4.0"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "std"] }
prometheus = "0.13"
uuid = { version = "1.7", features = ["serde", "v4"] }
sys-info = "0.9"
zip = "0.6"
thiserror = "1.0"
tempfile = "3.10"
axum = "0.7"
tower = "0.4"
